make default ordering lists mutable